# Tetris-AI

./: .gitignore  CMakeLists.txt  Constants.h  Environment.cpp  Environment.h  IAgent.h  MCTSAgent.cpp  MCTSAgent.h  NAgent.cpp  NAgent.h  PieceMoves.txt  README  README.md  TetrisState.h  agents.cpp  build_project.sh  game_server.py  requirements.txt  window_capture.py
headers/: Constants.h  Environment.h  IAgent.h  MCTSAgent.h  NAgent.h  TetrisState.h
src/: Environment.cpp  MCTSAgent.cpp  NAgent.cpp  agents.cpp
utils/: PieceMoves.txt  window_capture.py
